--- a/views/partials/file-upload.ejs
+++ b/views/partials/file-upload.ejs
@@ -1,6 +1,6 @@
 <div class="form-wrapper">
     <form action="/upload-file-csv" method="post" enctype="multipart/form-data" >
-        <input name="CSVfileUpload" id="csv-upload" type="file" accept=".csv">
+        <input required name="CSVfileUpload" id="csv-upload" type="file" accept=".csv">
         <label for="csv-upload">
             <img src="images/upload.svg"/>
             <div>Select a file or drag here</div>
