--- a/views/csv-display.ejs
+++ b/views/csv-display.ejs
@@ -24,7 +24,7 @@
 
             <!-- csv display -->
             <div class="csv-data-wrapper">
-                <table>
+                <table cellspacing="0">
                     <tr>
                         <% headers.forEach((header)=>{%>
                             <th>
