--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <body>
         <%- include('partials/navbar.ejs') %>
 
-        <header>Upload your CSV file and view it !</header>
+        <h1 class="heading">Discover and Explore Your Data: Upload Your CSV File!</h1>
 
         <main>
            <!-- csv uploader form-->
