--- a/views/partials/csv-lists.ejs
+++ b/views/partials/csv-lists.ejs
@@ -6,12 +6,14 @@
             <p class="name">
                 <%= record.originalname  %>
             </p>
-            <p class="view">
-                <a href="/csv-data/<%=record._id%>?start=1">Open</a>
-            </p>
-            <p class="delete">
-                <a href="/delete/<%= record._id %>">Delete</a>
-            </p>
+            <div class="actions">
+                <a class="view" title="view" href="/csv-data/<%=record._id%>?start=1">
+                    <img src="/images/view.svg" alt="">
+                </a>
+                <a class="delete" title="delete" href="/delete/<%= record._id %>">
+                    <img src="/images/delete.svg"/>
+                </a>
+            </div>
 
         </div>
 
