--- a/views/partials/file-upload.ejs
+++ b/views/partials/file-upload.ejs
@@ -9,7 +9,7 @@
 
         <div class="submit-wrapper">
             <p class="selected-file"></p>
-            <button type="submit">submit</button>
+            <button type="submit" disabled><span>Submit</span> <img src="/images/submit.svg" alt=""></button>
         </div>
     </form>
 </div>
