--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,5 @@
-<footer>this is a footer</footer>
+<footer>
+  <p>Thank you for using <b>CSV Viewer App</b>!</p>
+  <p>If you have any feedback or question contact me at <a href="mailto:rnegi0598@gmail.com">rnegi0598@gmail.com</a></p>
+
+</footer>
