--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,6 @@
-<nav> 
-    <p><a href="/">CSV-Viewer</a></p>
+<nav>
+
+  <img src="/images/logo.svg" alt="logo">
+  <a href="/">CSV-Viewer</a>
+
 </nav>
