--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,16 @@
-header {
-  font-size: 1.5rem;
+/* 
+:root{
+  --black:#0b2026;
+  --darkblue:#40798c;
+  --blue:#7099a8;
+  --lightblue:#d0ebf4;
+}
+*/
+h1.heading {
+  font-size: 2rem;
   margin-bottom: 2rem;
   text-align: center;
+  font-weight: 900;
 }
 
 .form-wrapper form {
@@ -18,6 +27,7 @@ header {
   align-items: center;
   gap: 15px;
   background-color: #efefef;
+  border: 1px solid var(--lightblue);
   border-radius: 5px;
   height: 300px;
   width: 100%;
@@ -26,13 +36,19 @@ header {
   width: 80px;
 }
 .form-wrapper form label span.file-upload-btn {
-  padding: 5px 10px;
-  background-color: #000;
+  padding: 8px 10px;
+  background-color: var(--black);
   color: #fff;
   font-weight: 900;
+  font-size: 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.form-wrapper form label span.file-upload-btn:hover {
+  opacity: 0.7;
 }
 .form-wrapper form .submit-wrapper {
-  margin: 20px 0;
+  margin: 25px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,16 +59,23 @@ header {
   font-size: 1.5rem;
 }
 .form-wrapper form .submit-wrapper button[type=submit] {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
   outline: none;
   border: none;
   background-color: green;
+  background-color: var(--darkblue);
   color: #fff;
   font-weight: 900;
   font-size: 2rem;
   padding: 10px 20px;
   cursor: pointer;
   border-radius: 5px;
+}
+.form-wrapper form .submit-wrapper button[type=submit]:disabled {
+  opacity: 0.7;
 }
 
 .csv-lists {
@@ -64,12 +87,17 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #efefef;
+  background-color: #F0F0F0;
+  border: 1px solid var(--blue);
+  border-radius: 5px;
+  color: var(--black);
+  font-weight: 900;
+  font-size: 1.2rem;
 }
-.csv-lists .csv-record a {
+.csv-lists .csv-record .actions a {
   text-decoration: none;
   color: inherit;
 }
-.csv-lists .csv-record a:hover {
-  text-decoration: underline;
+.csv-lists .csv-record .actions a:hover {
+  opacity: 0.6;
 }/*# sourceMappingURL=home.css.map */
