--- a/public/css/home.scss
+++ b/public/css/home.scss
@@ -1,7 +1,16 @@
-header {
-  font-size: 1.5rem;
+/* 
+:root{
+  --black:#0b2026;
+  --darkblue:#40798c;
+  --blue:#7099a8;
+  --lightblue:#d0ebf4;
+}
+*/
+h1.heading {
+  font-size: 2rem;
   margin-bottom: 2rem;
   text-align: center;
+  font-weight: 900;
 }
 
 // form upload
@@ -12,7 +21,7 @@ header {
     input {
       display: none;
     }
-    
+
     label {
       display: flex;
       flex-direction: column;
@@ -20,6 +29,7 @@ header {
       align-items: center;
       gap: 15px;
       background-color: #efefef;
+      border: 1px solid var(--lightblue);
       border-radius: 5px;
       height: 300px;
       width: 100%;
@@ -28,70 +38,84 @@ header {
         width: 80px;
       }
       span.file-upload-btn {
-        padding: 5px 10px;
-        background-color: #000;
+        padding: 8px 10px;
+        background-color: var(--black);
         color: #fff;
         font-weight: 900;
+        font-size: 1rem;
+        border-radius: 5px;
+        cursor: pointer;
+        &:hover{
+          opacity: 0.7;
+         
+        }
       }
     }
+    
 
-    .submit-wrapper{
-        margin: 20px 0;
+    .submit-wrapper {
+      margin: 25px 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 20px;
+
+      p {
+        font-size: 1.5rem;
+      }
+
+      button[type="submit"] {
         display: flex;
-        justify-content: center;
         align-items: center;
-        flex-wrap: wrap;
-        gap: 20px;
-
-        p{
-            font-size: 1.5rem;
-        }
-
-        button[type="submit"] {
-            display: block;
-            outline: none;
-            border: none;
-            background-color: green;
-            color: #fff;
-            font-weight: 900;
-            font-size: 2rem;
-           
-            padding: 10px 20px;
-            cursor: pointer;
-            border-radius: 5px;
-          }
-
+        justify-content: center;
+        gap: 5px;
+        outline: none;
+        border: none;
+        background-color: green;
+        background-color: var(--darkblue);
+        color: #fff;
+        // color: #000;
+        font-weight: 900;
+        font-size: 2rem;
+        padding: 10px 20px;
+        cursor: pointer;
+        border-radius: 5px;
+      }
+      button[type="submit"]:disabled{
+        opacity: 0.7;
+      }
     }
-    
-    
   }
 }
 
-
 // csv lists
-.csv-lists{
+.csv-lists {
   padding: 2rem;
-  .csv-record{
+  .csv-record {
     margin: 1rem;
     padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #efefef;
+    background-color: #F0F0F0;
+    border: 1px solid var(--blue);
+    border-radius: 5px;
+    color: var(--black);
+    font-weight: 900;
+    font-size: 1.2rem;
+    .actions{
 
-
-    a{
-      text-decoration: none;
-      color: inherit;
-
-      &:hover{
-        text-decoration: underline;
+      a {
+        text-decoration: none;
+        color: inherit;
+  
+        &:hover {
+          opacity: 0.6;
+        }
       }
+      
     }
+    
   }
-
-
 }
-
-
-
