--- a/public/css/home.css
+++ b/public/css/home.css
@@ -80,8 +80,12 @@ h1.heading {
 
 .csv-lists {
   padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 .csv-lists .csv-record {
+  flex-grow: 1;
+  min-width: 300px;
   margin: 1rem;
   padding: 1rem;
   display: flex;
@@ -93,6 +97,9 @@ h1.heading {
   color: var(--black);
   font-weight: 900;
   font-size: 1.2rem;
+}
+.csv-lists .csv-record .actions {
+  margin-left: 5px;
 }
 .csv-lists .csv-record .actions a {
   text-decoration: none;
