--- a/public/css/home.scss
+++ b/public/css/home.scss
@@ -92,7 +92,12 @@ h1.heading {
 // csv lists
 .csv-lists {
   padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+
   .csv-record {
+    flex-grow: 1;
+    min-width: 300px;
     margin: 1rem;
     padding: 1rem;
     display: flex;
@@ -105,7 +110,7 @@ h1.heading {
     font-weight: 900;
     font-size: 1.2rem;
     .actions{
-
+      margin-left: 5px;
       a {
         text-decoration: none;
         color: inherit;
